hphp/hack/test/typecheck/inout/bad_inout_decl_byref1.php
<?hh // partial

function test(inout int &$i): void {}
